[package]

name = "llvmint"
version = "0.0.3"
authors = ["Huon Wilson <dbau.pp@gmail.com>", "Avi Weinstock <aweinstock314@gmail.com>"]

homepage = "https://github.com/aweinstock314/llvmint"
repository = "https://github.com/aweinstock314/llvmint"
documentation = "https://docs.rs/llvmint"
license = "MIT/Apache-2.0"
keywords = ["numerics", "simd", "llvm", "intrinsics"]
readme = "README.md"
description = """
Bindings to (almost) all LLVM intrinsics, for all platforms.
"""


[dependencies]
simdty = { git = "https://github.com/GuillaumeGomez/simdty", rev = "ecfa075d744240e933b6d054ae1b4609aa32b9b9", version = "0.0.7" }

[features]
unstable = []
